--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -621,8 +621,8 @@ jobs:
               --syncdeps
           ccache --show-stats --verbose --version || :
       - name: Install
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
-        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           set -ex
           cd ci/msys2
@@ -635,6 +635,7 @@ jobs:
 
       # Artifact
       - uses: actions/upload-artifact@v5
+        if: matrix.msystem != 'CLANGARM64'
         with:
           name: ${{ matrix.msystem }}
           path: "*.pkg.tar.*"
@@ -644,8 +645,8 @@ jobs:
         run: |
           Set-TimeZone -Id "Tokyo Standard Time"
       - name: Install test dependencies
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
-        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           # "fiddle" is for ensuring using the installed system libffi
           MAKEFLAGS=-j$(nproc) gem install \
@@ -655,8 +656,8 @@ jobs:
             red-arrow
           ruby -e "require 'arrow'"
       - name: Prepare setup-extpp.rb
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
-        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           cat <<RUBY > setup-extpp.rb
           ["extpp"].each do |gem|
@@ -668,13 +669,13 @@ jobs:
           end
           RUBY
       - name: "Test: command line"
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
-        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           ruby test/command_line/run-test.rb
       - name: "Test: stdio"
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
-        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           ruby \
             -r./setup-extpp \
