ci cmake: Add MSYS2 ARM64 job (#2645)
GitHub: GH-2646

Note: This is still work in progress. CI is currently failing, but we
will fix these errors step by step.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -545,9 +545,9 @@ jobs:
               --interface=http \
               test/command/suite
 
-  windows-mingw:
-    name: Windows MinGW
-    runs-on: windows-latest
+  windows-msys2:
+    name: Windows MSYS2
+    runs-on: ${{ matrix.runner }}
     timeout-minutes: 45
     strategy:
       fail-fast: false
@@ -555,8 +555,13 @@ jobs:
         include:
           - msystem: MINGW64
             package-prefix: mingw-w64-x86_64
+            runner: windows-latest
           - msystem: UCRT64
             package-prefix: mingw-w64-ucrt-x86_64
+            runner: windows-latest
+          - msystem: CLANGARM64
+            package-prefix: mingw-w64-clang-aarch64
+            runner: windows-11-arm
     steps:
       - uses: actions/checkout@v5
         with:
@@ -594,10 +599,11 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ccache
-          key: cmake-windows-mingw-${{ matrix.msystem }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
-          restore-keys: cmake-windows-mingw-${{ matrix.msystem }}-ccache-
+          key: cmake-windows-msys2-${{ matrix.msystem }}-ccache-${{ hashFiles('lib/**', 'src/**', 'plugins/**', 'include/**') }}
+          restore-keys: cmake-windows-msys2-${{ matrix.msystem }}-ccache-
       - name: Build
         shell: msys2 {0}
+        continue-on-error: ${{ matrix.msystem == 'CLANGARM64' }}
         run: |
           set -ex
           version=$(cat base_version)
@@ -615,6 +621,7 @@ jobs:
               --syncdeps
           ccache --show-stats --verbose --version || :
       - name: Install
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
         run: |
           set -ex
@@ -628,6 +635,7 @@ jobs:
 
       # Artifact
       - uses: actions/upload-artifact@v5
+        if: matrix.msystem != 'CLANGARM64'
         with:
           name: ${{ matrix.msystem }}
           path: "*.pkg.tar.*"
@@ -637,6 +645,7 @@ jobs:
         run: |
           Set-TimeZone -Id "Tokyo Standard Time"
       - name: Install test dependencies
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
         run: |
           # "fiddle" is for ensuring using the installed system libffi
@@ -647,6 +656,7 @@ jobs:
             red-arrow
           ruby -e "require 'arrow'"
       - name: Prepare setup-extpp.rb
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
         run: |
           cat <<RUBY > setup-extpp.rb
@@ -659,10 +669,12 @@ jobs:
           end
           RUBY
       - name: "Test: command line"
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
         run: |
           ruby test/command_line/run-test.rb
       - name: "Test: stdio"
+        if: matrix.msystem != 'CLANGARM64'
         shell: msys2 {0}
         run: |
           ruby \
