Suppress the conversion warning in GNU like C compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1173,6 +1173,10 @@ if(NOT "${GRN_WITH_OPENZL}" STREQUAL "no")
         URL ${OPENZL_SOURCE_URL}
         URL_HASH "SHA256=${GRN_OPENZL_BUNDLED_SHA256}")
       grn_prepare_fetchcontent()
+      if(GRN_C_COMPILER_GNU_LIKE)
+        string(APPEND CMAKE_C_FLAGS " -Wno-conversion")
+        string(APPEND CMAKE_CXX_FLAGS " -Wno-conversion")
+      endif()
       fetchcontent_makeavailable(openzl)
       if(CMAKE_VERSION VERSION_LESS 3.28)
         message("${openzl_SOURCE_DIR}/build/cmake")
