packages: debian: create empty openzl directory for dh_install
On environments where OpenZL is disabled
(e.g., Ubuntu Jammy with CMake < 3.24), the openzl
directory doesn't exist. This causes dh_install to
fail because libgroonga0.install expects
`usr/share/groonga/openzl/*` to exist.

Create an empty openzl directory like we do for faiss
to avoid the error.

--- a/packages/debian/rules
+++ b/packages/debian/rules
@@ -47,5 +47,6 @@ override_dh_auto_install:
 	install -m 0644 debian/groonga-munin-plugins.conf \
 	  debian/tmp/etc/munin/plugin-conf.d/groonga
 	install -d debian/tmp/usr/share/groonga/faiss/
+	install -d debian/tmp/usr/share/groonga/openzl/
 	mv debian/tmp/usr/share/doc/groonga/ \
 	  debian/tmp/usr/share/doc/groonga-doc/
