packages: yum: create empty openzl directory for rpm build
On environments where OpenZL is disabled (e.g., Amazon Linux 2023
with CMake < 3.24), the openzl directory doesn't exist. This causes
rpm build to fail because groonga.spec.in expects
%{_datadir}/groonga/openzl/ to exist.

Create an empty openzl directory to avoid the error.

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -271,6 +271,7 @@ rm -rf $RPM_BUILD_ROOT/usr/lib/libh3* || :
 
 mv $RPM_BUILD_ROOT%{_datadir}/doc/groonga groonga-doc
 
+mkdir -p $RPM_BUILD_ROOT%{_datadir}/groonga/openzl/
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/run/groonga
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/lib/groonga/db
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/log/groonga
