cmake: disable bundled OpenZL on MSVC
OpenZL always builds its bundled zstd via add_subdirectory(), which
conflicts with Groonga's bundled zstd build on MSVC. Both create the
same CMake targets (libzstd_static, libzstd, clean-all), causing
CMake configuration to fail.

On Linux, this conflict doesn't occur because Groonga uses system
zstd (GRN_WITH_ZSTD=auto) instead of bundled zstd.

Disable bundled OpenZL on MSVC until OpenZL supports using an
external zstd library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1151,13 +1151,18 @@ if(NOT "${GRN_WITH_OPENZL}" STREQUAL "no")
     set(GRN_WITH_OPENZL TRUE)
     target_link_libraries(grn_dependencies INTERFACE ${GRN_OPENZL_TARGET})
     message(STATUS "OpenZL: system")
-  elseif(NOT FETCHCONTENT_FULLY_DISCONNECTED AND CMAKE_VERSION
-                                                 VERSION_GREATER_EQUAL "3.24")
+  elseif(
+    NOT FETCHCONTENT_FULLY_DISCONNECTED
+    AND CMAKE_VERSION VERSION_GREATER_EQUAL "3.24"
+    AND NOT MSVC)
     # FETCHCONTENT_FULLY_DISCONNECTED isn't for disabling network
     # access but deb uses it...
     #
     # CMake >= 3.24 is required because OpenZL uses DOWNLOAD_EXTRACT_TIMESTAMP
     # and OVERRIDE_FIND_PACKAGE option internally.
+    #
+    # MSVC is not supported yet because OpenZL always builds its bundled zstd
+    # via add_subdirectory(), which conflicts with Groonga's bundled zstd build.
     #
     # We need to use function to create a variable scope
     function(grn_build_openzl)
