cmake: use OpenZL's CMake package directly
Remove FindGroongaopenzl.cmake and use
find_package(openzl) directly since OpenZL provides
its own CMake package (openzl-config.cmake).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1139,17 +1139,17 @@ set(GRN_WITH_OPENZL
     CACHE STRING "Support data compression by OpenZL.")
 if(NOT "${GRN_WITH_OPENZL}" STREQUAL "no")
   if("${GRN_WITH_OPENZL}" STREQUAL "bundled")
-    set(Groongaopenzl_FOUND FALSE)
+    set(openzl_FOUND FALSE)
   else()
     if("${GRN_WITH_OPENZL}" STREQUAL "system")
-      find_package(Groongaopenzl REQUIRED)
+      find_package(openzl REQUIRED)
     else()
-      find_package(Groongaopenzl)
+      find_package(openzl)
     endif()
   endif()
-  if(Groongaopenzl_FOUND)
+  if(openzl_FOUND)
     set(GRN_WITH_OPENZL TRUE)
-    target_link_libraries(grn_dependencies INTERFACE ${GRN_OPENZL_TARGET})
+    target_link_libraries(grn_dependencies INTERFACE OpenZL::openzl)
     message(STATUS "OpenZL: system")
   elseif(
     NOT FETCHCONTENT_FULLY_DISCONNECTED
