--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -271,7 +271,6 @@ rm -rf $RPM_BUILD_ROOT/usr/lib/libh3* || :
 
 mv $RPM_BUILD_ROOT%{_datadir}/doc/groonga groonga-doc
 
-mkdir -p $RPM_BUILD_ROOT%{_datadir}/groonga/openzl/
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/run/groonga
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/lib/groonga/db
 mkdir -p $RPM_BUILD_ROOT%{_localstatedir}/log/groonga
@@ -410,10 +409,11 @@ exit 0
 %{_datadir}/groonga/html/
 %{_datadir}/groonga/llama.cpp/
 %{_datadir}/groonga/mruby/
-%{_datadir}/groonga/openzl/
 %if %{is_amazon_linux}
 %{_datadir}/groonga/msgpack-c/
 %{_datadir}/groonga/simdjson/
+%else
+%{_datadir}/groonga/openzl/
 %endif
 %{_datadir}/groonga/xsimd/
 %config(noreplace) %{_sysconfdir}/groonga/synonyms.tsv
