--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -411,9 +411,12 @@ exit 0
 %{_datadir}/groonga/mruby/
 %if %{is_amazon_linux}
 %{_datadir}/groonga/msgpack-c/
-%{_datadir}/groonga/simdjson/
-%else
+%endif
+%if ! %{is_amazon_linux}
 %{_datadir}/groonga/openzl/
+%endif
+%if %{is_amazon_linux}
+%{_datadir}/groonga/simdjson/
 %endif
 %{_datadir}/groonga/xsimd/
 %config(noreplace) %{_sysconfdir}/groonga/synonyms.tsv
