lib: suppress -Wtypedef-redefinition for compressor.c with OpenZL
OpenZL headers have duplicate typedef definitions that
trigger -Wtypedef-redefinition on Clang. This is an
upstream issue in OpenZL where the same types are
defined in both zl_opaque_types.h and other headers
like zl_graph_api.h, zl_compressor.h, etc.

```
/home/runner/work/groonga/groonga.build/_deps/openzl-src/include/openzl/zl_graph_api.h:48:27: error: redefinition of typedef 'ZL_Graph' is a C11 feature [-Werror,-Wtypedef-redefinition]
   48 | typedef struct ZL_Graph_s ZL_Graph;
      |                           ^
/home/runner/work/groonga/groonga.build/_deps/openzl-src/include/openzl/zl_opaque_types.h:49:27: note: previous definition is here
   49 | typedef struct ZL_Graph_s ZL_Graph;
      |                           ^
In file included from /home/runner/work/groonga/groonga/lib/compressor.c:46:
```

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -53,6 +53,14 @@ if(GRN_C_COMPILER_GNU_LIKE)
     SOURCE distance.cpp
     APPEND_STRING
     PROPERTY COMPILE_FLAGS " -Wno-unknown-pragmas -Wno-float-equal")
+  if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+    # TODO: Remove this when OpenZL fixes duplicate typedef definitions
+    # in their headers (zl_opaque_types.h and other headers).
+    set_property(
+      SOURCE compressor.c
+      APPEND_STRING
+      PROPERTY COMPILE_FLAGS " -Wno-typedef-redefinition")
+  endif()
 endif()
 if(GRN_WITH_XSIMD)
   if(GRN_WITH_SIMD_AVX)
