compressor: add skeleton support for OpenZL (#2677)
This adds the skeleton code for OpenZL support
compression support.

```console
$ groonga --version | grep openzl
Groonga 15.2.1-6-g5bff1f5 [Linux,x86_64,utf8,match-escalation-threshold=0,nfkc,mecab,message-pack,onigmo,zlib,lz4,zstandard,epoll,xxhash,h3,simdjson,llama.cpp,faiss,openzl]
```

We'll implement actual compression in the following PR.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -54,6 +54,15 @@ if(GRN_C_COMPILER_GNU_LIKE)
     APPEND_STRING
     PROPERTY COMPILE_FLAGS " -Wno-unknown-pragmas -Wno-float-equal")
 endif()
+if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+  # TODO: Remove this when OpenZL fixes duplicate typedef definitions
+  # in their headers.
+  # ref: https://github.com/facebook/openzl/pull/293
+  set_property(
+    SOURCE compressor.c
+    APPEND_STRING
+    PROPERTY COMPILE_FLAGS " -Wno-typedef-redefinition")
+endif()
 if(GRN_WITH_XSIMD)
   if(GRN_WITH_SIMD_AVX)
     list(APPEND LIBGROONGA_CPP_SOURCES distance_avx.cpp)
